--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,13 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "args": [
+                "/Users/haitongyang/Downloads/modelnet40v1png",
+                "--model",
+                "mvcnn",
+                "--pretrained",
+            ]
         }
     ]
 }
